# rust_os

./: .travis.yml  Cargo.toml  README.md  travis-qemu.bash
.github/workflows/: build-code.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  panic_handler.rs  should_panic.rs  stack_overflow.rs
