[package]
name = "rust_os"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.6.4", features = ["map_physical_memory"]}
volatile = "0.2.6"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
spin = "0.5.0"
uart_16550 = "0.2.0"
x86_64 = "0.7.4"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33   # (0x10 << 1) | 1

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false
