[package]
name = "rust_os"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.11"
spin = "0.5.2"
volatile = "0.2.7"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]
